syntax = "proto3";

option go_package = ".;router";

service Router {
    rpc Query (QueryRequest) returns (QueryReply);
    rpc Join (JoinRequest) returns (JoinReply);
    rpc Leave (LeaveRequest) returns (LeaveReply);
}

message Group{
    int32 id = 1;
    repeated string servers = 2;
}

message Config {
    int32 id = 1;
    repeated int32 shards = 2;
    repeated Group groups = 3;
}


message QueryRequest {
    int32 id = 1;
}

message JoinRequest {
    repeated Group groups = 1;
}

message LeaveRequest {
    repeated int32 group_ids = 1;
}

enum ErrCode {
    ERR_CODE_WRONG_LEADER = 0;
    ERR_CODE_OK = 1;
}

message QueryReply {
    Config config = 1;
    ErrCode err_code = 2;
}

message JoinReply {
    ErrCode err_code = 1;
}

message LeaveReply {
    ErrCode err_code = 1;
}

