syntax = "proto3";

option go_package = ".;kvserver";

service KVServer {
    rpc OpenSession (OpenSessionArgs) returns (OpenSessionReply);
    rpc Get (GetArgs) returns (GetReply);
    rpc Update (UpdateArgs) returns (UpdateReply);
}

message OpenSessionArgs {

}

message OpenSessionReply {
    int64 ClientId = 1;
    string Err = 2;
}

message UpdateArgs {
    string Key = 1;
    string Value = 2;
    string Op = 3;          // "Put" or "Append" or "Delete"
    int64 ClientId = 4;     // client id
    int64 RequestId = 5;    // client request id (increase monotonically)
}

message UpdateReply {
    string Err = 1;
}

message GetArgs {
    string Key = 1;
    int64 ClientId = 2;   // client id
    int64 RequestId = 3; // client request id (increase monotonically)
}

message GetReply {
    string Err = 1;
    string Value = 2;
}

//service Raft {
//    rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
//
//    rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
//
//    rpc InstallSnapshot(InstallSnapshotArgs) returns (InstallSnapshotReply);
//}
//
//message RequestVoteArgs {
//    int32 Term = 1;
//    int32 CandidateId = 2;
//    int32 LastLogIndex = 3;
//    int32 LastLogTerm = 4;
//}
//
//message RequestVoteReply {
//    repeated bytes command = 1;
//}
//
//message AppendEntriesArgs {
//    int32 Term = 1;
//    int32 LeaderId = 2;
//    int32 PrevLogIndex = 3;
//    int32 PrevLogTerm = 4;
//    int32 LeaderCommit = 5;
//    repeated LogEntry Entries = 6;
//}
//
//message LogEntry {
//    int32 Term = 1;
//
//}
//
//message AppendEntriesReply {
//
//}
//
//message InstallSnapshotArgs {
//
//}
//
//message InstallSnapshotReply {
//
//}

